infra/openshift/route-service-a.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: service-a
spec:
  to:
    kind: Service
    name: service-a
  port:
    targetPort: 8080
  tls:
    termination: edge
